--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@
 <p style="margin-top: 2rem; background-color: #fef08a; color: #92400e; padding: 1rem; border-radius: 10px; font-weight: bold; text-align: center; font-size: 1.1rem;">
   🎉 ¡Promoción especial! En la compra de 3 cuartillas o más, obtienes un <span style="color: #b91c1c;">50% de descuento</span> en el total. ¡Aprovecha!
 </p>
+      <p style="margin-top: 2rem; background-color: #fef08a; color: #92400e; padding: 1rem; border-radius: 10px; font-weight: bold; text-align: center; font-size: 1.1rem;">
+  🎉 ¡Promoción especial! En la compra de 3 cuartillas o más, obtienes un <span style="color: #b91c1c;">50% de descuento</span> en el total. ¡Aprovecha!
+</p>
       <p style="margin-top: 1.5rem;"><strong>💡 ¿Por qué varían los precios?</strong><br>
       Porque no es lo mismo copiar una definición que redactar una demanda completa con hechos, derecho y jurisprudencia.<br>
       Te explicamos cómo se calcula el precio:</p>
